// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Rendering Render Header component with default props 1`] = `
<React.Fragment>
  <header
    className="Header"
    data-theme="dark"
  >
    <Layer
      className="Header__topNav"
    >
      <div
        className="Header__leftSideMenu"
      >
        <div
          className="Header__leftSideMenu__info"
        >
          <HeaderLogo />
          <HeaderAuthentication />
        </div>
      </div>
      <div
        className="Header__rightSideMenu"
      >
        <HeaderHelpMenu />
        <HeaderSystemMenu />
        <HeaderAccountMenu />
      </div>
    </Layer>
  </header>
</React.Fragment>
`;

exports[`Header Rendering Render Header component with props 1`] = `
<React.Fragment>
  <header
    className="Header customClassName"
    data-theme="dark"
  >
    <Layer
      className="Header__topNav"
    >
      <div
        className="Header__leftSideMenu"
      >
        <div
          className="Header__leftSideMenu__info"
        >
          <HeaderLogo />
          <HeaderAuthentication />
        </div>
      </div>
      <div
        className="Header__rightSideMenu"
      >
        <HeaderHelpMenu />
        <HeaderSystemMenu />
        <HeaderAccountMenu />
      </div>
    </Layer>
  </header>
</React.Fragment>
`;
